# AlgoTrade-Lite

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: main.py  models.py
backend/api/: routes.py  schemas.py
backend/engine/: backtester.py  data.py  metrics.py  strategies.py
backend/engine/strategies/: sma.py
dashboard/: app.py
tests/: conftest.py  test_api.py  test_backtest.py  test_backtester.py  test_metrics.py  test_signals.py
